--- a/src/components/detail.scss
+++ b/src/components/detail.scss
@@ -910,8 +910,8 @@ a {
 	
 		.pics {
 			button.pic-arrow {
-				fill: #fff;
-				background: #000;
+				fill: #333;
+				background: #fff;
 			}
 	
 			button.demo-dot {
